<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <TextView
            android:id="@+id/position_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/position_header"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/time_header"
            app:layout_constraintStart_toEndOf="@+id/name_header"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingStart="10dp"/>

        <TextView
            android:id="@+id/name_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_header"
            app:layout_constraintBottom_toBottomOf="@+id/position_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/position_header"
            app:layout_constraintTop_toTopOf="@+id/position_header"
            android:paddingStart="20dp"/>

        <TextView
            android:id="@+id/club_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/club_header"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingStart="130dp" />

        <TextView
            android:id="@+id/time_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="40dp"
            android:text="@string/time_header"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="62dp" />

    <Button
        android:id="@+id/about_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:onClick="new_activity"
        android:text="@string/about_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_button"
        app:layout_constraintVertical_bias="0.426" />

    <Button
        android:id="@+id/place_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_button"
        app:layout_constraintBottom_toBottomOf="@+id/name_button"
        app:layout_constraintEnd_toStartOf="@+id/name_button"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/name_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/club_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/club_button"
        app:layout_constraintBottom_toBottomOf="@+id/about_button"
        app:layout_constraintEnd_toStartOf="@+id/name_button"
        app:layout_constraintHorizontal_bias="0.561"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/about_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/name_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="120dp"
        android:text="@string/name_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/about_button" />


</androidx.constraintlayout.widget.ConstraintLayout>